--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -107,6 +107,12 @@ main {
   color: whitesmoke;
 }
 
+.footer-divider {
+  background-color: $hover-grey;
+  border: 0.3px solid $hover-grey;
+  height: 0.5px;
+}
+
 .footer-email-container {
   padding-top: 10rem;
   padding-bottom: 10rem;
@@ -124,22 +130,42 @@ main {
 }
 
 .footer-email-input {
-  padding-top: 4rem;
+  padding-top: 3rem;
   background-color: inherit;
-  color: whitesmoke;
+  color: $hover-grey;
   font-family: $font-secondary;
   border: hidden;
+  width: 100%;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .footer-email-input:focus {
   outline: none;
 }
 
+.footer-email-label {
+  padding-top: 0.2rem;
+  color: $hover-grey;
+  font-size: $font-sm;
+}
+
 .footer-email-signup-button {
+  margin-top: 2rem;
   font-family: $font-secondary;
   font-size: $font-sm;
   background-color: inherit;
   color: whitesmoke;
+  border: 0.2px solid whitesmoke;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+  transition: all 0.3s ease-in-out;
+}
+
+.footer-email-signup-button:hover {
+  cursor: pointer;
+  color: $color-primary;
+  border: 0.2px solid $color-primary;
 }
 
 .footer-grid {
@@ -149,14 +175,33 @@ main {
 }
 
 .footer-grid-category-name {
-  padding-bottom: 1rem;
+  padding-bottom: 0.2rem;
   letter-spacing: $letter-spacing-small;
-  font-family: $font-secondary;
-  font-size: 0.9rem;
+  // font-family: $font-secondary;
+  font-size: 0.7rem;
+  font-weight: 400;
 }
 
 .footer-grid-item {
   text-align: left;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  height: 100%;
+}
+
+.footer-name-icon-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.plus-minus-icon {
+  font-family: $font-primary;
+  font-size: 1.2rem;
+  margin-left: auto;
+}
+
+.plus-minus-icon:hover {
+  cursor: pointer;
 }
 
 .footer-grid-list {
@@ -164,9 +209,22 @@ main {
   padding: 0;
 }
 
+.footer-grid-list-sm {
+  list-style: none;
+  padding: 0;
+  transition: linear 0.5s;
+}
+
 .footer-grid-list-item {
   font-size: $font-sm;
   line-height: 2rem;
+  transition: all 0.2s ease-in-out;
+  font-weight: 200;
+}
+
+.footer-grid-list-item:hover {
+  cursor: pointer;
+  color: $color-primary;
 }
 
 .socials-container {
@@ -191,20 +249,10 @@ main {
   flex-direction: row;
 }
 
-.back-to-top {
-  font-size: 1.2rem;
-  transition: all 0.2s ease-in-out;
-}
-
-.back-to-top:hover {
-  cursor: pointer;
-  color: $color-primary;
-}
-
 .socials-text-version {
   font-size: $font-sm;
   transition: all 0.2s ease-in-out;
-  padding: 0 0 0 2rem;
+  padding: 0 1rem 0 1rem;
 }
 
 .socials-text-version:hover {
@@ -216,6 +264,7 @@ main {
   display: flex;
   flex-direction: row;
   margin-left: auto;
+  font-weight: 200;
 }
 
 /////////////////////////////////////////////
@@ -246,6 +295,18 @@ main {
   .footer-grid {
     display: grid;
     grid-template-columns: 100%;
+  }
+
+  .footer-name-icon-container:hover {
+    cursor: pointer;
+  }
+
+  .footer-grid-category-name {
+    position: absolute;
+  }
+
+  .footer-grid-list {
+    display: none;
   }
 
   .socials-container {
@@ -280,6 +341,14 @@ main {
     margin: auto;
   }
 
+  .footer-name-icon-container {
+    pointer-events: none;
+  }
+
+  .plus-minus-icon {
+    display: none;
+  }
+
   .social-icon {
     display: none;
   }
@@ -300,9 +369,16 @@ main {
     display: none;
   }
 
-  .footer-grid-item,
-  li {
+  .footer-grid-item {
     margin: auto;
+  }
+
+  .footer-name-icon-container {
+    pointer-events: none;
+  }
+
+  .plus-minus-icon {
+    display: none;
   }
 
   .socials-container-small {
