--- a/client/src/scss/abstracts/_variables.scss
+++ b/client/src/scss/abstracts/_variables.scss
@@ -2,8 +2,8 @@ $font-primary: "Montserrat", sans-serif;
 $font-secondary: "Playfair Display", serif;
 $font-xl: 5rem;
 $font-lg: 3rem;
-$font-default: 1rem;
-$color-primary: #ff2400;
+$font-default: 1.15rem;
+$color-primary: #ac1700;
 $color-secondary: #141418;
 $color-tertiary: white;
 $black: #000000;
