--- a/client/src/scss/abstracts/_variables.scss
+++ b/client/src/scss/abstracts/_variables.scss
@@ -2,6 +2,7 @@ $font-primary: "Montserrat", sans-serif;
 $font-secondary: "Playfair Display", serif;
 $font-xl: 5rem;
 $font-lg: 3rem;
+$font-sm: 1rem;
 $font-default: 1.15rem;
 $color-primary: #ac1700;
 $color-secondary: #141418;
@@ -15,3 +16,6 @@ $color-background-alternate-2: #a2b5bb;
 $color-background-alternate-3: #f1eee9;
 $hover-grey: #413f42;
 $letter-spacing-small: 0.1ch;
+
+//margins
+$section-margin: 10rem;
