--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -7,6 +7,7 @@
 @import "base/typography";
 @import "base/utilities";
 
+@import "components/carousel";
 @import "components/menu";
 @import "components/season";
 @import "components/video";
