--- a/client/src/scss/abstracts/_mixins.scss
+++ b/client/src/scss/abstracts/_mixins.scss
@@ -53,3 +53,10 @@ breakpoints
     }
   }
 }
+
+////////////////////////////////////////////
+/// Padding
+@mixin section-padding-x-axis {
+  padding-left: 10rem;
+  padding-right: 10rem;
+}
