--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -8,6 +8,7 @@
 @import "base/utilities";
 
 @import "components/carousel";
+@import "components/divider";
 @import "components/menu";
 @import "components/season";
 @import "components/video";
